envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902

static_resources:
  listeners:
    - address:
    socket_address:
      address: 0.0.0.0
      port_value: 10000
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_managers
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            route_config:
              name: all
              virtual_hosts:
                - name: allbackend_cluster
                  domains: ["*"]
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: allbackend_cluster
            http_filters:
              - name: envoy.filters.http.router
                typed_config: {}
  clusters:
    - name: allbackend_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: allbackend_cluster
        endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: jekyll
                    port_value: 4000
